# CMake

./: .gitignore  C++脚本开发环境搭建.md
workSpace/Tecwin/: CMakeLists.txt  test.cpp  test.h
workSpace/Tecwin2/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
